tests/paczka1/fuzzy1/57093378.err
Error in line 4: B5hy A902 201,4
Error in line 34: A287 A287 40,9
Error in line 37: gOp38 S200 403,4
